bindings/rust/ove/src/bindings_stub.rs


    // core object
    pub fn lv_obj_create(parent: *mut lv_obj_t) -> *mut lv_obj_t;
    pub fn lv_obj_delete(obj: *mut lv_obj_t);
    pub fn lv_obj_clean(obj: *mut lv_obj_t);
    pub fn lv_obj_get_parent(obj: *mut lv_obj_t) -> *mut lv_obj_t;
    pub fn lv_obj_get_child_count(obj: *mut lv_obj_t) -> u32;
    pub fn lv_obj_get_width(obj: *mut lv_obj_t) -> i32;
    pub fn lv_obj_get_height(obj: *mut lv_obj_t) -> i32;
    pub fn lv_obj_set_size(obj: *mut lv_obj_t, w: i32, h: i32);
    pub fn lv_obj_set_width(obj: *mut lv_obj_t, w: i32);
    pub fn lv_obj_set_height(obj: *mut lv_obj_t, h: i32);
    pub fn lv_obj_set_pos(obj: *mut lv_obj_t, x: i32, y: i32);
    pub fn lv_obj_center(obj: *mut lv_obj_t);
    pub fn lv_obj_align(obj: *mut lv_obj_t, align: u8, x_ofs: i32, y_ofs: i32);
    pub fn lv_obj_set_user_data(obj: *mut lv_obj_t, data: *mut c_void);
    pub fn lv_obj_get_user_data(obj: *mut lv_obj_t) -> *mut c_void;
    pub fn lv_obj_add_flag(obj: *mut lv_obj_t, f: u32);
    pub fn lv_obj_remove_flag(obj: *mut lv_obj_t, f: u32);
    pub fn lv_obj_add_state(obj: *mut lv_obj_t, state: u16);
    pub fn lv_obj_remove_state(obj: *mut lv_obj_t, state: u16);
    pub fn lv_obj_add_event_cb(
        obj:       *mut lv_obj_t,
        event_cb:  lv_event_cb_t,
        filter:    u32,
        user_data: *mut c_void,
    );
    pub fn lv_obj_add_style(obj: *mut lv_obj_t, style: *mut lv_style_t, selector: u32);
    pub fn lv_obj_set_flex_flow(obj: *mut lv_obj_t, flow: u32);

    // inline styles
    pub fn lv_obj_set_style_bg_color(obj: *mut lv_obj_t, color: lv_color_t, selector: u32);
    pub fn lv_obj_set_style_bg_opa(obj: *mut lv_obj_t, opa: u8, selector: u32);
    pub fn lv_obj_set_style_border_color(obj: *mut lv_obj_t, color: lv_color_t, selector: u32);
    pub fn lv_obj_set_style_border_width(obj: *mut lv_obj_t, w: i32, selector: u32);
    pub fn lv_obj_set_style_radius(obj: *mut lv_obj_t, r: i32, selector: u32);
    pub fn lv_obj_set_style_pad_top(obj: *mut lv_obj_t, p: i32, selector: u32);
    pub fn lv_obj_set_style_pad_bottom(obj: *mut lv_obj_t, p: i32, selector: u32);
    pub fn lv_obj_set_style_pad_left(obj: *mut lv_obj_t, p: i32, selector: u32);
    pub fn lv_obj_set_style_pad_right(obj: *mut lv_obj_t, p: i32, selector: u32);
    pub fn lv_obj_set_style_pad_row(obj: *mut lv_obj_t, g: i32, selector: u32);
    pub fn lv_obj_set_style_pad_column(obj: *mut lv_obj_t, g: i32, selector: u32);
    pub fn lv_obj_set_style_text_color(obj: *mut lv_obj_t, color: lv_color_t, selector: u32);
    pub fn lv_obj_set_style_text_font(
        obj:      *mut lv_obj_t,
        font:     *const lv_font_t,
        selector: u32,
    );

    // style objects
    pub fn lv_style_init(style: *mut lv_style_t);
    pub fn lv_style_reset(style: *mut lv_style_t);
    pub fn lv_style_set_bg_color(style: *mut lv_style_t, color: lv_color_t);
    pub fn lv_style_set_bg_opa(style: *mut lv_style_t, opa: u8);
    pub fn lv_style_set_radius(style: *mut lv_style_t, r: i32);
    pub fn lv_style_set_border_color(style: *mut lv_style_t, color: lv_color_t);
    pub fn lv_style_set_border_width(style: *mut lv_style_t, w: i32);
    pub fn lv_style_set_pad_top(style: *mut lv_style_t, p: i32);
    pub fn lv_style_set_pad_bottom(style: *mut lv_style_t, p: i32);
    pub fn lv_style_set_pad_left(style: *mut lv_style_t, p: i32);
    pub fn lv_style_set_pad_right(style: *mut lv_style_t, p: i32);
    pub fn lv_style_set_text_color(style: *mut lv_style_t, color: lv_color_t);
    pub fn lv_style_set_text_font(style: *mut lv_style_t, font: *const lv_font_t);

    // color helpers
    pub fn lv_palette_main(palette: u32) -> lv_color_t;

    // screen
    pub fn lv_screen_active() -> *mut lv_obj_t;

    // label widget
    pub fn lv_label_create(parent: *mut lv_obj_t) -> *mut lv_obj_t;
    pub fn lv_label_set_text(label: *mut lv_obj_t, text: *const core::ffi::c_char);
    pub fn lv_label_set_text_static(label: *mut lv_obj_t, text: *const core::ffi::c_char);

    // bar widget
    pub fn lv_bar_create(parent: *mut lv_obj_t) -> *mut lv_obj_t;
    pub fn lv_bar_set_value(bar: *mut lv_obj_t, value: i32, anim: i32);
    pub fn lv_bar_set_range(bar: *mut lv_obj_t, min: i32, max: i32);

} // extern "C" LVGL
